# soft_information_models

./: .gitignore  LICENSE.rst  README.md  pyproject.toml
data/neutral_atom/: NA_RPCode_BasisX_d5_T10_p0.00500_bias100.stim  NA_RPCode_BasisX_d5_T10_p0.00550_bias100.stim  NA_RPCode_BasisX_d5_T10_p0.00600_bias100.stim  NA_RPCode_BasisX_d5_T10_p0.00650_bias100.stim  NA_RPCode_BasisX_d5_T10_p0.00700_bias100.stim  NA_RPCode_BasisX_d5_T10_p0.00750_bias100.stim  NA_RPCode_BasisX_d5_T10_p0.00800_bias100.stim  NA_RPCode_BasisX_d5_T10_p0.00850_bias100.stim  NA_RPCode_BasisX_d5_T10_p0.00900_bias100.stim  NA_RPCode_BasisX_d5_T10_p0.00950_bias100.stim  NA_RPCode_BasisX_d5_T10_p0.01000_bias100.stim  NA_RPCode_BasisX_d7_T10_p0.00500_bias100.stim  NA_RPCode_BasisX_d7_T10_p0.00550_bias100.stim  NA_RPCode_BasisX_d7_T10_p0.00600_bias100.stim  NA_RPCode_BasisX_d7_T10_p0.00650_bias100.stim  NA_RPCode_BasisX_d7_T10_p0.00700_bias100.stim  NA_RPCode_BasisX_d7_T10_p0.00750_bias100.stim  NA_RPCode_BasisX_d7_T10_p0.00800_bias100.stim  NA_RPCode_BasisX_d7_T10_p0.00850_bias100.stim  NA_RPCode_BasisX_d7_T10_p0.00900_bias100.stim  NA_RPCode_BasisX_d7_T10_p0.00950_bias100.stim  NA_RPCode_BasisX_d7_T10_p0.01000_bias100.stim  NA_RPCode_BasisX_d9_T10_p0.00500_bias100.stim  NA_RPCode_BasisX_d9_T10_p0.00550_bias100.stim  NA_RPCode_BasisX_d9_T10_p0.00600_bias100.stim  NA_RPCode_BasisX_d9_T10_p0.00650_bias100.stim  NA_RPCode_BasisX_d9_T10_p0.00700_bias100.stim  NA_RPCode_BasisX_d9_T10_p0.00750_bias100.stim  NA_RPCode_BasisX_d9_T10_p0.00800_bias100.stim  NA_RPCode_BasisX_d9_T10_p0.00850_bias100.stim  NA_RPCode_BasisX_d9_T10_p0.00900_bias100.stim  NA_RPCode_BasisX_d9_T10_p0.00950_bias100.stim  NA_RPCode_BasisX_d9_T10_p0.01000_bias100.stim  NA_RPCode_BasisZ_d5_T10_p0.00500_bias100.stim  NA_RPCode_BasisZ_d5_T10_p0.00550_bias100.stim  NA_RPCode_BasisZ_d5_T10_p0.00600_bias100.stim  NA_RPCode_BasisZ_d5_T10_p0.00650_bias100.stim  NA_RPCode_BasisZ_d5_T10_p0.00700_bias100.stim  NA_RPCode_BasisZ_d5_T10_p0.00750_bias100.stim  NA_RPCode_BasisZ_d5_T10_p0.00800_bias100.stim  (+42 more)
docs/: example.stim  getting_started.ipynb
soft_information_models/: __init__.py  abstract_pdf.py  neutral_atom_pdf.py  superconducting_pdf.py
tests/: test_neutral_atom_pdf.py  test_superconducting_pdf.py
(+156 files in other folders)
