[tool.poetry]
name = "soft-information-models"
version = "0.0.1"
description = "Soft information simulation tools"
authors = ["Joonas Majaniemi <joonas.majaniemi@riverlane.com>", "Elisha S. Matekole <elisha.siddiqui-matekole@riverlane.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
stim = "^1.13"
matplotlib = "^3.5.2, <3.7.2"
ipykernel = "^6.25.1"
scipy = "^1.13.0"
numpy = "^1.26"

# test
pytest = {version = "^7.2.0", optional = true}
pytest-cov = {version = "^4.0.0", optional = true}
pytest-lazy-fixture = {version = "^0.6.3", optional = true}
pytest-repeat = {version = "^0.9.3", optional = true}
pytest-mock = {version = "^3.12.0", optional = true}
nbmake = {version = "^1.3.0", optional = true}

# lint
autopep8 = {version = "^2.0.1", optional = true}
isort = {version = "^5.13.2", optional = true}
mypy = {version = "^1.0.0", optional = true}
pycodestyle = {version = "^2.8.0", optional = true}
pylint = {version = "^2.15.9", optional = true}

# docs
Sphinx = {version = "^5.3.0", optional = true}
sphinx-copybutton = {version = "^0.5.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
sphinx-toggleprompt = {version = "^0.0.5", optional = true}
sphinx-autodoc-typehints = {version = "^1.18.1", optional = true}
recommonmark = {version = "^0.7.1", optional = true}
rinohtype = {version = "^0.5.3", optional = true}
nbsphinx = {version = "^0.9.3", optional = true}
pip-licenses = {version = "^4.4.0", optional = true}
ipython = {version = "~8.12.1", optional = true}

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "pytest-lazy-fixture", "pytest-repeat", "pytest-mock", "nbmake", "ipython"]
lint = ["pylint", "mypy", "pycodestyle", "autopep8", "black", "isort"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.typecheck]
ignored-modules = [
    "stim",
]

[tool.pylint."MESSAGES CONTROL"]
disable = """
    cyclic-import,
    import-outside-toplevel,
    missing-module-docstring,
    too-many-instance-attributes,
"""

[[tool.mypy.overrides]]
module = [
    "stim",
]
ignore_missing_imports = true
follow_imports = "skip"
